--- a/Python.ipynb
+++ b/Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPp0jNRBxBoNFFfF3VsIDdq",
+      "authorship_tag": "ABX9TyOm38/bzsufL7g1dx0HrAOo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,12 +177,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MtBqIfS0y62T",
-        "outputId": "20a0113f-11eb-4fe8-8746-2cb6b9d63f6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        }
+        },
+        "id": "MtBqIfS0y62T",
+        "outputId": "20a0113f-11eb-4fe8-8746-2cb6b9d63f6e"
       },
       "source": [
         "data[data['v_h'] == '1 5261']"
@@ -262,11 +262,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AX4L0iTa1zwL",
-        "outputId": "0ff44d36-6f1f-4648-f617-66112046c773",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AX4L0iTa1zwL",
+        "outputId": "0ff44d36-6f1f-4648-f617-66112046c773"
       },
       "source": [
         "data.v_h"
@@ -347,12 +347,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "676-H51J0uay",
-        "outputId": "1e34f7d7-e4f1-46fb-d142-588025f4be34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "676-H51J0uay",
+        "outputId": "1e34f7d7-e4f1-46fb-d142-588025f4be34"
       },
       "source": [
         "data.iloc[64:67,:]"
@@ -464,127 +464,169 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sp5DvcSu01CS",
-        "outputId": "e3ebb905-637a-4562-eab3-e1c950e88d9c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "sp5DvcSu01CS"
       },
       "source": [
-        "data.v_h.loc[data['v_h'].str.match(r'[A-Z]')]"
+        "data = data.loc[~data['v_h'].str.match(r'[A-Z]')] #removing the ones that had months..."
       ],
-      "execution_count": 88,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "532     May-38\n",
-              "1250    Aug-84\n",
-              "Name: v_h, dtype: object"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 88
-        }
-      ]
+      "execution_count": 103,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "p7qyMMiV6uHe",
-        "outputId": "4f046dab-ecdf-4034-dae7-2d310e427979",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "6752a38b-06c9-41cc-c3df-8ac5e3520ade"
       },
       "source": [
-        "data.iloc[531,:]"
+        "data.v_h.astype(int)"
       ],
-      "execution_count": 94,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Name                                        N3031\n",
-              "RA (1950)                                   95130\n",
-              "Dec m_zw                               691800 7.7\n",
-              "v_h                                        May-38\n",
-              "sig sour                                   562700\n",
-              "Type                                         2A2s\n",
-              "D1                                             26\n",
-              "D1.1                                           14\n",
-              "BT                                           7.75\n",
-              "UGC                                       05318 3\n",
-              "FLWO#                                         0.5\n",
-              "Notes and Other Names    Liner,M81,Dsrc=J,KDG218A\n",
-              "Name: 532, dtype: object"
+              "1       6605\n",
+              "2       7323\n",
+              "3       1050\n",
+              "4       7301\n",
+              "5       5241\n",
+              "        ... \n",
+              "2391    4948\n",
+              "2392    4827\n",
+              "2393    4371\n",
+              "2394    4336\n",
+              "2395    5532\n",
+              "Name: v_h, Length: 2393, dtype: int64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 94
+          "execution_count": 106
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7k_j077K-DeO",
-        "outputId": "bfe38ddd-322a-4918-c36b-ec04cef12897",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "data.iloc[1249,:]"
-      ],
-      "execution_count": 92,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Name                        N4212\n",
-              "RA (1950)                  121306\n",
-              "Dec m_zw                 14110012\n",
-              "v_h                        Aug-84\n",
-              "sig sour                  27 2700\n",
-              "Type                          4A5\n",
-              "D1                            2.9\n",
-              "D1.1                          1.9\n",
-              "BT                          11.87\n",
-              "UGC                          7275\n",
-              "FLWO#                         NaN\n",
-              "Notes and Other Names    2288(22)\n",
-              "Name: 1250, dtype: object"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 92
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GB8wqkfR-UE_",
-        "outputId": "e1a2e9dd-953f-4c96-90f8-2e84c224ad96",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 36
+        },
+        "id": "7k_j077K-DeO",
+        "outputId": "505229ad-9e88-4ae9-b292-38887cf25e4a"
+      },
+      "source": [
+        "min(data.v_h)"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'   7'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GB8wqkfR-UE_",
+        "outputId": "d35cc000-f35a-41ba-a4c9-f4cc8d1bee72"
+      },
+      "source": [
+        "data['v_h'] = pa.to_numeric(data['v_h'])"
+      ],
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning:\n",
+            "\n",
+            "\n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "73hIESqT_HTp",
+        "outputId": "2de998d5-67c7-45a1-a2e2-c2750438eb13"
+      },
+      "source": [
+        "data.dtypes"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Name                     object\n",
+              "RA (1950)                object\n",
+              "Dec m_zw                 object\n",
+              "v_h                       int64\n",
+              "sig sour                 object\n",
+              "Type                     object\n",
+              "D1                       object\n",
+              "D1.1                     object\n",
+              "BT                       object\n",
+              "UGC                      object\n",
+              "FLWO#                    object\n",
+              "Notes and Other Names    object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NhIyZOxFEnAg",
+        "outputId": "bd13678d-c003-4c7d-cbbb-72eb6edd098b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 300
         }
       },
       "source": [
-        "data[:531]"
+        "data.describe()"
       ],
-      "execution_count": 99,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,219 +650,69 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Name</th>\n",
-              "      <th>RA (1950)</th>\n",
-              "      <th>Dec m_zw</th>\n",
               "      <th>v_h</th>\n",
-              "      <th>sig sour</th>\n",
-              "      <th>Type</th>\n",
-              "      <th>D1</th>\n",
-              "      <th>D1.1</th>\n",
-              "      <th>BT</th>\n",
-              "      <th>UGC</th>\n",
-              "      <th>FLWO#</th>\n",
-              "      <th>Notes and Other Names</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>00006+2142</td>\n",
-              "      <td>36</td>\n",
-              "      <td>21420014.4</td>\n",
-              "      <td>6605</td>\n",
-              "      <td>3212700</td>\n",
-              "      <td>5P</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0.7</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>6</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Sy2,MK334,IVZw1</td>\n",
+              "      <th>count</th>\n",
+              "      <td>2393.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>00006-0211</td>\n",
-              "      <td>36</td>\n",
-              "      <td>-2110014.3</td>\n",
-              "      <td>7323</td>\n",
-              "      <td>3112700</td>\n",
-              "      <td>4X</td>\n",
-              "      <td>1.3</td>\n",
-              "      <td>0.8</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>5</td>\n",
-              "      <td>T02072</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>mean</th>\n",
+              "      <td>4226.582532</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>N7814</td>\n",
-              "      <td>41.1</td>\n",
-              "      <td>15520312</td>\n",
-              "      <td>1050</td>\n",
-              "      <td>410611</td>\n",
-              "      <td>2A s</td>\n",
-              "      <td>6.5</td>\n",
-              "      <td>2.7</td>\n",
-              "      <td>11.35</td>\n",
-              "      <td>8</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>std</th>\n",
+              "      <td>15431.899908</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>00010+2256</td>\n",
-              "      <td>100</td>\n",
-              "      <td>22560014</td>\n",
-              "      <td>7301</td>\n",
-              "      <td>3412700</td>\n",
-              "      <td>5</td>\n",
-              "      <td>1.9</td>\n",
-              "      <td>1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>14</td>\n",
-              "      <td>T03645</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>min</th>\n",
+              "      <td>-437.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>N7816</td>\n",
-              "      <td>112</td>\n",
-              "      <td>7110014</td>\n",
-              "      <td>5241</td>\n",
-              "      <td>510620</td>\n",
-              "      <td>4</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>16</td>\n",
-              "      <td>T16711</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>25%</th>\n",
+              "      <td>1559.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
+              "      <th>50%</th>\n",
+              "      <td>3402.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>527</th>\n",
-              "      <td>N3039</td>\n",
-              "      <td>94954</td>\n",
-              "      <td>2220014.4</td>\n",
-              "      <td>5036</td>\n",
-              "      <td>2312700</td>\n",
-              "      <td>2A</td>\n",
-              "      <td>1.1</td>\n",
-              "      <td>0.6</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>5297</td>\n",
-              "      <td>T02786</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>75%</th>\n",
+              "      <td>5941.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>528</th>\n",
-              "      <td>N3040SE</td>\n",
-              "      <td>95012</td>\n",
-              "      <td>19400014.5</td>\n",
-              "      <td>7595</td>\n",
-              "      <td>3312700</td>\n",
-              "      <td>-3</td>\n",
-              "      <td>1.6</td>\n",
-              "      <td>0.6</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>05300S</td>\n",
-              "      <td>T01616</td>\n",
-              "      <td>SE</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>529</th>\n",
-              "      <td>N3041</td>\n",
-              "      <td>95024</td>\n",
-              "      <td>16550012.5</td>\n",
-              "      <td>1413</td>\n",
-              "      <td>5 0620</td>\n",
-              "      <td>5X4T</td>\n",
-              "      <td>3.7</td>\n",
-              "      <td>2.4</td>\n",
-              "      <td>12.25</td>\n",
-              "      <td>5303</td>\n",
-              "      <td>T09522</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>530</th>\n",
-              "      <td>N3044</td>\n",
-              "      <td>95106</td>\n",
-              "      <td>1490012.5</td>\n",
-              "      <td>1292</td>\n",
-              "      <td>6 0611</td>\n",
-              "      <td>5B s</td>\n",
-              "      <td>4.7</td>\n",
-              "      <td>0.8</td>\n",
-              "      <td>12.55</td>\n",
-              "      <td>5311</td>\n",
-              "      <td>T09487</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>531</th>\n",
-              "      <td>09511+2337</td>\n",
-              "      <td>95107.4</td>\n",
-              "      <td>23371014.5</td>\n",
-              "      <td>3957</td>\n",
-              "      <td>3012700</td>\n",
-              "      <td>-5</td>\n",
-              "      <td>0.8</td>\n",
-              "      <td>0.6</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>5313</td>\n",
-              "      <td>T01358</td>\n",
-              "      <td>NaN</td>\n",
+              "      <th>max</th>\n",
+              "      <td>747469.000000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>531 rows × 12 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "           Name RA (1950)    Dec m_zw  ...     UGC   FLWO# Notes and Other Names\n",
-              "1    00006+2142        36  21420014.4  ...       6     NaN       Sy2,MK334,IVZw1\n",
-              "2    00006-0211        36  -2110014.3  ...       5  T02072                   NaN\n",
-              "3         N7814      41.1    15520312  ...       8     NaN                   NaN\n",
-              "4    00010+2256       100    22560014  ...      14  T03645                   NaN\n",
-              "5         N7816       112     7110014  ...      16  T16711                   NaN\n",
-              "..          ...       ...         ...  ...     ...     ...                   ...\n",
-              "527       N3039     94954   2220014.4  ...    5297  T02786                   NaN\n",
-              "528     N3040SE     95012  19400014.5  ...  05300S  T01616                    SE\n",
-              "529       N3041     95024  16550012.5  ...    5303  T09522                   NaN\n",
-              "530       N3044     95106   1490012.5  ...    5311  T09487                   NaN\n",
-              "531  09511+2337   95107.4  23371014.5  ...    5313  T01358                   NaN\n",
-              "\n",
-              "[531 rows x 12 columns]"
+              "                 v_h\n",
+              "count    2393.000000\n",
+              "mean     4226.582532\n",
+              "std     15431.899908\n",
+              "min      -437.000000\n",
+              "25%      1559.000000\n",
+              "50%      3402.000000\n",
+              "75%      5941.000000\n",
+              "max    747469.000000"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 99
+          "execution_count": 115
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "73hIESqT_HTp"
+        "id": "XTV1FovcE_Np"
       },
       "source": [
         ""
